# QRClaimIt

./: Cargo.toml  LICENSE  README.md  docker-compose.yaml
migrations/: 0001_init_db.up.sql
src/: error.rs  main.rs
src/modules/qr/: app_service.rs
src/modules/qr/api/: dto.rs  handler.rs  mod.rs  route_config.rs
src/modules/qr/domain/: mod.rs  models.rs  ports.rs
src/modules/qr/infrastructure/: db_repository.rs  mod.rs
src/utils/: config.rs  mod.rs
src/utils/db/: postgres.rs
