[package]
name = "qr_verificator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
serde = "1.0.198"
serde_json = "1.0.116"
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio-native-tls","chrono"] }
tokio = { version = "1.37.0", features = ["full"] }
async-trait = "0.1.71"
env_logger = "0.8.3"
log = "0.4.19"
actix-cors = "0.6.4"
thiserror = "1.0.58"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3.30"
uuid = { version = "0.8", features = ["serde", "v4"] }
rand = "0.8.5"
